# face-app-focus

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: jetson-nano-setup.md
scripts/: nano_diagnose.py  nano_run.sh  nano_setup.sh  nano_snapshot.py
src/app/: config.py  controller.py  headless_main.py  main.py  runtime.py
src/capture/: camera.py
src/domain/: models.py
src/inference/: attention_rules.py  face_landmarks.py
src/scoring/: engine.py
src/storage/: repository.py
src/ui/: window.py
tests/: test_hourly_rollover.py  test_scoring_engine.py
