[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "focus-monitor"
version = "0.1.0"
description = "Local desktop focus monitor with hourly and total scoring"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "PySide6>=6.8.0",
  "opencv-python>=4.10.0",
  "mediapipe>=0.10.14",
  "numpy>=1.26.0",
]

[project.scripts]
focus-monitor = "app.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
