[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "focus-monitor"
version = "0.1.0"
description = "Local desktop focus monitor with hourly and total scoring"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "opencv-python-headless>=4.5.0",
  "mediapipe>=0.10.0",
  "numpy>=1.21.0",
]

[project.optional-dependencies]
ui = [
  "PySide6>=6.8.0",
  "opencv-python>=4.5.0",
]

[project.scripts]
focus-monitor = "app.main:main"
focus-monitor-headless = "app.headless_main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
